// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`veTable row expand > expandOption expandedRowKeys(controllable attr) 1`] = `
"<div><button class="button-demo">第3行展开切换</button>
  <div class="vue-table-root" style="width: 100%;">
    <div style="width: 100%;" class="ve-table ve-table-border-around">
      <div class="ve-table-container ve-table-enable-cell-selection" style="height: 0px;">
        <!---->
        <div class="ve-table-content-wrapper">
          <table class="ve-table-content ve-table-border-x">
            <colgroup>
              <col style="width: 50px;">
              <col style="width: 200px;">
              <col style="width: 300px;">
              <col>
            </colgroup>
            <thead class="ve-table-fixed-header ve-table-header">
              <tr class="ve-table-header-tr">
                <th style="text-align: center; top: 0px;" class="ve-table-header-th" rowspan="1" colspan="1">
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </th>
                <th style="text-align: left; top: 0px;" class="ve-table-header-th" rowspan="1" colspan="1">
                  <!---->Name
                  <!---->
                  <!---->
                  <!---->
                </th>
                <th style="text-align: left; top: 0px;" class="ve-table-header-th" rowspan="1" colspan="1">
                  <!---->Hobby
                  <!---->
                  <!---->
                  <!---->
                </th>
                <th style="text-align: left; top: 0px;" class="ve-table-header-th ve-table-last-column" rowspan="1" colspan="1">
                  <!---->Address
                  <!---->
                  <!---->
                  <!---->
                </th>
              </tr>
            </thead>
            <tbody class="ve-table-body ve-table-row-hover ve-table-row-highlight">
              <tr style="height: 0px;">
                <td style="padding: 0px; height: 0px; border: 0px;">
                  <!---->
                </td>
                <td style="padding: 0px; height: 0px; border: 0px;">
                  <!---->
                </td>
                <td style="padding: 0px; height: 0px; border: 0px;">
                  <!---->
                </td>
                <td style="padding: 0px; height: 0px; border: 0px;">
                  <!---->
                </td>
              </tr>
              <tr class="ve-table-body-tr" row-key="1001">
                <td class="ve-table-body-td" style="text-align: center;" rowspan="1" colspan="1" col-key="a"><span class="ve-table-row-expand-icon ve-table-expand-icon-collapsed"><i class="ve-icon iconfont-vet icon-vet-right-arrow"></i></span>
                  <!---->
                  <!---->
                  <!---->
                </td>
                <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="b">
                  <!---->
                  <!---->
                  <!---->John
                </td>
                <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="c">
                  <!---->
                  <!---->
                  <!---->coding
                </td>
                <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="d">
                  <!---->
                  <!---->
                  <!---->No.1 Century Avenue, Shanghai
                </td>
              </tr>
              <tr class="ve-table-expand-tr">
                <td class="ve-table-expand-td" colspan="4">
                  <div class="ve-table-expand-td-content">
                    <p>My name is<span style="color: rgb(24, 144, 255);">John</span>,I'm living in No.1 Century Avenue, Shanghai</p>
                  </div>
                </td>
              </tr>
              <tr class="ve-table-body-tr" row-key="1002">
                <td class="ve-table-body-td" style="text-align: center;" rowspan="1" colspan="1" col-key="a"><span class="ve-table-row-expand-icon ve-table-expand-icon-collapsed"><i class="ve-icon iconfont-vet icon-vet-right-arrow"></i></span>
                  <!---->
                  <!---->
                  <!---->
                </td>
                <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="b">
                  <!---->
                  <!---->
                  <!---->Dickerson
                </td>
                <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="c">
                  <!---->
                  <!---->
                  <!---->coding
                </td>
                <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="d">
                  <!---->
                  <!---->
                  <!---->No.1 Century Avenue, Beijing
                </td>
              </tr>
              <tr class="ve-table-expand-tr">
                <td class="ve-table-expand-td" colspan="4">
                  <div class="ve-table-expand-td-content">
                    <p>My name is<span style="color: rgb(24, 144, 255);">Dickerson</span>,I'm living in No.1 Century Avenue, Beijing</p>
                  </div>
                </td>
              </tr>
              <tr class="ve-table-body-tr" row-key="1003">
                <td class="ve-table-body-td" style="text-align: center;" rowspan="1" colspan="1" col-key="a"><span class="ve-table-row-expand-icon"><i class="ve-icon iconfont-vet icon-vet-right-arrow"></i></span>
                  <!---->
                  <!---->
                  <!---->
                </td>
                <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="b">
                  <!---->
                  <!---->
                  <!---->Larsen
                </td>
                <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="c">
                  <!---->
                  <!---->
                  <!---->coding and coding repeat
                </td>
                <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="d">
                  <!---->
                  <!---->
                  <!---->No.1 Century Avenue, Chongqing
                </td>
              </tr>
              <!---->
              <tr class="ve-table-body-tr" row-key="1004">
                <td class="ve-table-body-td" style="text-align: center;" rowspan="1" colspan="1" col-key="a"><span class="ve-table-row-expand-icon"><i class="ve-icon iconfont-vet icon-vet-right-arrow"></i></span>
                  <!---->
                  <!---->
                  <!---->
                </td>
                <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="b">
                  <!---->
                  <!---->
                  <!---->Geneva
                </td>
                <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="c">
                  <!---->
                  <!---->
                  <!---->coding and coding repeat
                </td>
                <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="d">
                  <!---->
                  <!---->
                  <!---->No.1 Century Avenue, Xiamen
                </td>
              </tr>
              <!---->
              <tr class="ve-table-body-tr" row-key="1005">
                <td class="ve-table-body-td" style="text-align: center;" rowspan="1" colspan="1" col-key="a"><span class="ve-table-row-expand-icon"><i class="ve-icon iconfont-vet icon-vet-right-arrow"></i></span>
                  <!---->
                  <!---->
                  <!---->
                </td>
                <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="b">
                  <!---->
                  <!---->
                  <!---->Jami
                </td>
                <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="c">
                  <!---->
                  <!---->
                  <!---->coding and coding repeat
                </td>
                <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="d">
                  <!---->
                  <!---->
                  <!---->No.1 Century Avenue, Shenzhen
                </td>
              </tr>
              <!---->
            </tbody>
            <tfoot class="ve-table-fixed-footer ve-table-footer"></tfoot>
          </table>
          <div class="ve-table-selection-wrapper">
            <div class="ve-table-selection-fixed-left">
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
            <div class="ve-table-selection-middle">
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
            <div class="ve-table-selection-fixed-right">
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div style="top: 0px; left: 0px; height: 1px; z-index: -1; opacity: 0;" class="ve-table-edit-input-container"><textarea class="ve-table-edit-input" tabindex="-1" value=""></textarea></div>
      <!---->
      <!---->
    </div>
    <!---->
  </div>
</div>"
`;

exports[`veTable row expand > render 1`] = `
"<div class="vue-table-root">
  <div style="width: 100%;" class="ve-table ve-table-border-around">
    <div class="ve-table-container ve-table-enable-cell-selection" style="height: 0px;">
      <!---->
      <div class="ve-table-content-wrapper">
        <table class="ve-table-content ve-table-border-x">
          <colgroup>
            <col style="width: 50px;">
            <col style="width: 200px;">
            <col style="width: 300px;">
            <col>
          </colgroup>
          <thead class="ve-table-fixed-header ve-table-header">
            <tr class="ve-table-header-tr">
              <th style="text-align: center; top: 0px;" class="ve-table-header-th" rowspan="1" colspan="1">
                <!---->
                <!---->
                <!---->
                <!---->
              </th>
              <th style="text-align: left; top: 0px;" class="ve-table-header-th" rowspan="1" colspan="1">
                <!---->Name
                <!---->
                <!---->
                <!---->
              </th>
              <th style="text-align: left; top: 0px;" class="ve-table-header-th" rowspan="1" colspan="1">
                <!---->Hobby
                <!---->
                <!---->
                <!---->
              </th>
              <th style="text-align: left; top: 0px;" class="ve-table-header-th ve-table-last-column" rowspan="1" colspan="1">
                <!---->Address
                <!---->
                <!---->
                <!---->
              </th>
            </tr>
          </thead>
          <tbody class="ve-table-body ve-table-row-hover ve-table-row-highlight">
            <tr style="height: 0px;">
              <td style="padding: 0px; border: 0px; height: 0px;">
                <!---->
              </td>
              <td style="padding: 0px; border: 0px; height: 0px;">
                <!---->
              </td>
              <td style="padding: 0px; border: 0px; height: 0px;">
                <!---->
              </td>
              <td style="padding: 0px; border: 0px; height: 0px;">
                <!---->
              </td>
            </tr>
            <tr class="ve-table-body-tr" row-key="1001">
              <td class="ve-table-body-td" style="text-align: center;" rowspan="1" colspan="1" col-key="a"><span class="ve-table-row-expand-icon ve-table-expand-icon-collapsed"><i class="ve-icon iconfont-vet icon-vet-right-arrow"></i></span>
                <!---->
                <!---->
                <!---->
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="b">
                <!---->
                <!---->
                <!---->John
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="c">
                <!---->
                <!---->
                <!---->coding
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="d">
                <!---->
                <!---->
                <!---->No.1 Century Avenue, Shanghai
              </td>
            </tr>
            <tr class="ve-table-expand-tr">
              <td class="ve-table-expand-td" colspan="4">
                <div class="ve-table-expand-td-content">
                  <!---->
                </div>
              </td>
            </tr>
            <tr class="ve-table-body-tr" row-key="1002">
              <td class="ve-table-body-td" style="text-align: center;" rowspan="1" colspan="1" col-key="a">
                <!---->
                <!---->
                <!---->
                <!---->
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="b">
                <!---->
                <!---->
                <!---->Dickerson
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="c">
                <!---->
                <!---->
                <!---->coding
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="d">
                <!---->
                <!---->
                <!---->No.1 Century Avenue, Beijing
              </td>
            </tr>
            <!---->
            <tr class="ve-table-body-tr" row-key="1003">
              <td class="ve-table-body-td" style="text-align: center;" rowspan="1" colspan="1" col-key="a"><span class="ve-table-row-expand-icon ve-table-expand-icon-collapsed"><i class="ve-icon iconfont-vet icon-vet-right-arrow"></i></span>
                <!---->
                <!---->
                <!---->
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="b">
                <!---->
                <!---->
                <!---->Larsen
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="c">
                <!---->
                <!---->
                <!---->coding and coding repeat
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="d">
                <!---->
                <!---->
                <!---->No.1 Century Avenue, Chongqing
              </td>
            </tr>
            <tr class="ve-table-expand-tr">
              <td class="ve-table-expand-td" colspan="4">
                <div class="ve-table-expand-td-content">
                  <!---->
                </div>
              </td>
            </tr>
            <tr class="ve-table-body-tr" row-key="1004">
              <td class="ve-table-body-td" style="text-align: center;" rowspan="1" colspan="1" col-key="a"><span class="ve-table-row-expand-icon"><i class="ve-icon iconfont-vet icon-vet-right-arrow"></i></span>
                <!---->
                <!---->
                <!---->
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="b">
                <!---->
                <!---->
                <!---->Geneva
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="c">
                <!---->
                <!---->
                <!---->coding and coding repeat
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="d">
                <!---->
                <!---->
                <!---->No.1 Century Avenue, Xiamen
              </td>
            </tr>
            <!---->
            <tr class="ve-table-body-tr" row-key="1005">
              <td class="ve-table-body-td" style="text-align: center;" rowspan="1" colspan="1" col-key="a"><span class="ve-table-row-expand-icon"><i class="ve-icon iconfont-vet icon-vet-right-arrow"></i></span>
                <!---->
                <!---->
                <!---->
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="b">
                <!---->
                <!---->
                <!---->Jami
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="c">
                <!---->
                <!---->
                <!---->coding and coding repeat
              </td>
              <td class="ve-table-body-td" style="text-align: left;" rowspan="1" colspan="1" col-key="d">
                <!---->
                <!---->
                <!---->No.1 Century Avenue, Shenzhen
              </td>
            </tr>
            <!---->
          </tbody>
          <tfoot class="ve-table-fixed-footer ve-table-footer"></tfoot>
        </table>
        <div class="ve-table-selection-wrapper">
          <div class="ve-table-selection-fixed-left">
            <!---->
            <!---->
            <!---->
            <!---->
          </div>
          <div class="ve-table-selection-middle">
            <!---->
            <!---->
            <!---->
            <!---->
          </div>
          <div class="ve-table-selection-fixed-right">
            <!---->
            <!---->
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </div>
    <div style="top: 0px; left: 0px; height: 1px; z-index: -1; opacity: 0;" class="ve-table-edit-input-container"><textarea class="ve-table-edit-input" tabindex="-1" value=""></textarea></div>
    <!---->
    <!---->
  </div>
  <!---->
</div>"
`;
